--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "dev": "tsx watch src/server.ts"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "license": "MIT",
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^9.1.7",
@@ -16,6 +19,8 @@
     "@fastify/cors": "^8.1.1",
     "@prisma/client": "^4.5.0",
     "fastify": "^4.9.2",
-    "prisma": "^4.5.0"
+    "prisma": "^4.5.0",
+    "short-unique-id": "^4.4.4",
+    "zod": "^3.19.1"
   }
 }
